trying fixing pip errors

--- a/nwpackageversions/index.html
+++ b/nwpackageversions/index.html
@@ -5,17 +5,9 @@
   </head>
   <body>
     <h1>nwpackageversions</h1>
-    <a href="git+https://github.com/numbworks/nwpackageversions.git@v1.8.1#egg=nwpackageversions&subdirectory=src" data-requires-python="&gt;=3.12.5">1.8.1</a>
+    <a href="git+https://github.com/numbworks/nwpackageversions.git@v1.8.1#subdirectory=src&egg=nwpackageversions-1.8.1" data-requires-python="&gt;=3.12.5">nwpackageversions-1.8.1</a>
 	<br/>
-    <a href="git+https://github.com/numbworks/nwpackageversions.git@v1.8.0#egg=nwpackageversions&subdirectory=src" data-requires-python="&gt;=3.12.5">1.8.0</a>
-	<br/>
-    <a href="git+https://github.com/numbworks/nwpackageversions.git@v1.6.0#egg=nwpackageversions&subdirectory=src" data-requires-python="&gt;=3.12.5">1.6.0</a>
-	<br/>
-    <a href="git+https://github.com/numbworks/nwpackageversions.git@v1.2.0#egg=nwpackageversions&subdirectory=src" data-requires-python="&gt;=3.12.5">1.2.0</a>
-	<br/>
-    <a href="git+https://github.com/numbworks/nwpackageversions.git@v1.1.0#egg=nwpackageversions&subdirectory=src" data-requires-python="&gt;=3.12.5">1.1.0</a>
-	<br/>
-    <a href="git+https://github.com/numbworks/nwpackageversions.git@v1.0.0#egg=nwpackageversions&subdirectory=src" data-requires-python="&gt;=3.12.5">1.0.0</a>
+    <a href="git+https://github.com/numbworks/nwpackageversions.git@v1.8.0#subdirectory=src&egg=nwpackageversions-1.8.0" data-requires-python="&gt;=3.12.5">nwpackageversions-1.8.0</a>
 	<br/>
   </body>
 </html>
