trying fixing pip errors

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	</section>
 	<div class="package" >
 		<ul>
-			<li><a href="/nwpackageversions/">nwpackageversions</a></li>
+			<li><a href="nwpackageversions/">nwpackageversions</a></li>
 			<li><a href="nwshared/">nwshared</a></li>
 			<li><a href="nwtimetracking/">nwtimetracking</a></li>
 			<li><a href="nwreadinglist/">nwreadinglist</a></li>
