--- a/nwpackageversions/index.html
+++ b/nwpackageversions/index.html
@@ -9,5 +9,13 @@
 	<br/>
     <a href="git+https://github.com/numbworks/nwpackageversions.git@v1.8.0#subdirectory=src&egg=nwpackageversions-1.8.0" data-requires-python="&gt;=3.12.5">nwpackageversions-1.8.0</a>
 	<br/>
+    <a href="git+https://github.com/numbworks/nwpackageversions.git@v1.8.0#subdirectory=src&egg=nwpackageversions-1.6.0" data-requires-python="&gt;=3.12.5">nwpackageversions-1.6.0</a>
+	<br/>
+    <a href="git+https://github.com/numbworks/nwpackageversions.git@v1.8.0#subdirectory=src&egg=nwpackageversions-1.2.0" data-requires-python="&gt;=3.12.5">nwpackageversions-1.2.0</a>
+	<br/>
+    <a href="git+https://github.com/numbworks/nwpackageversions.git@v1.8.0#subdirectory=src&egg=nwpackageversions-1.1.0" data-requires-python="&gt;=3.12.5">nwpackageversions-1.1.0</a>
+	<br/>
+    <a href="git+https://github.com/numbworks/nwpackageversions.git@v1.8.0#subdirectory=src&egg=nwpackageversions-1.0.0" data-requires-python="&gt;=3.12.5">nwpackageversions-1.0.0</a>
+	<br/>	
   </body>
 </html>
