--- a/nwreadinglist/index.html
+++ b/nwreadinglist/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>nwreadinglist</h1>
-    <a href="git+https://github.com/numbworks/nwreadinglist.git@v4.2.0#egg=nwreadinglist&subdirectory=src" data-requires-python="&gt;=3.12.5">nwreadinglist-4.2.0</a>
+    <a href="git+https://github.com/numbworks/nwreadinglist.git@v4.2.0#subdirectory=src&egg=nwreadinglist-4.2.0" data-requires-python="&gt;=3.12.5">nwreadinglist-4.2.0</a>
 	<br/>
   </body>
 </html>
