--- a/nwshared/index.html
+++ b/nwshared/index.html
@@ -5,19 +5,19 @@
   </head>
   <body>
     <h1>nwshared</h1>
-    <a href="git+https://github.com/numbworks/nwshared.git@v1.8.1#egg=nwshared&subdirectory=src" data-requires-python="&gt;=3.12.5">nwshared-1.8.1</a>
+    <a href="git+https://github.com/numbworks/nwshared.git@v1.8.1#subdirectory=src&egg=nwshared-1.8.1" data-requires-python="&gt;=3.12.5">nwshared-1.8.1</a>
 	<br/>
-    <a href="git+https://github.com/numbworks/nwshared.git@v1.8.0#egg=nwshared&subdirectory=src" data-requires-python="&gt;=3.12.5">nwshared-1.8.0</a>
+    <a href="git+https://github.com/numbworks/nwshared.git@v1.8.0#subdirectory=src&egg=nwshared-1.8.0" data-requires-python="&gt;=3.12.5">nwshared-1.8.0</a>
 	<br/>
-    <a href="git+https://github.com/numbworks/nwshared.git@v1.7.1#egg=nwshared&subdirectory=src" data-requires-python="&gt;=3.12.5">nwshared-1.7.1</a>
+    <a href="git+https://github.com/numbworks/nwshared.git@v1.7.1#subdirectory=src&egg=nwshared-1.7.1" data-requires-python="&gt;=3.12.5">nwshared-1.7.1</a>
 	<br/>
-    <a href="git+https://github.com/numbworks/nwshared.git@v1.7.0#egg=nwshared&subdirectory=src" data-requires-python="&gt;=3.12.5">nwshared-1.7.0</a>
+    <a href="git+https://github.com/numbworks/nwshared.git@v1.7.0#subdirectory=src&egg=nwshared-1.7.0" data-requires-python="&gt;=3.12.5">nwshared-1.7.0</a>
 	<br/>	
-    <a href="git+https://github.com/numbworks/nwshared.git@v1.5.0#egg=nwshared&subdirectory=src" data-requires-python="&gt;=3.12.5">nwshared-1.5.0</a>
+    <a href="git+https://github.com/numbworks/nwshared.git@v1.5.0#subdirectory=src&egg=nwshared-1.5.0" data-requires-python="&gt;=3.12.5">nwshared-1.5.0</a>
 	<br/>
-    <a href="git+https://github.com/numbworks/nwshared.git@v1.4.0#egg=nwshared&subdirectory=src" data-requires-python="&gt;=3.12.5">nwshared-1.4.0</a>
+    <a href="git+https://github.com/numbworks/nwshared.git@v1.4.0#subdirectory=src&egg=nwshared-1.4.0" data-requires-python="&gt;=3.12.5">nwshared-1.4.0</a>
 	<br/>
-    <a href="git+https://github.com/numbworks/nwshared.git@v1.3.0#egg=nwshared&subdirectory=src" data-requires-python="&gt;=3.12.5">nwshared-1.3.0</a>
+    <a href="git+https://github.com/numbworks/nwshared.git@v1.3.0#subdirectory=src&egg=nwshared-1.3.0" data-requires-python="&gt;=3.12.5">nwshared-1.3.0</a>
 	<br/>
   </body>
 </html>
