--- a/nwtimetracking/index.html
+++ b/nwtimetracking/index.html
@@ -5,17 +5,17 @@
   </head>
   <body>
     <h1>nwtimetracking</h1>
-    <a href="git+https://github.com/numbworks/nwtimetracking.git@v5.0.0#egg=nwtimetracking&subdirectory=src" data-requires-python="&gt;=3.12.5">nwtimetracking-5.0.0</a>
+    <a href="git+https://github.com/numbworks/nwtimetracking.git@v5.0.0#subdirectory=src&egg=nwtimetracking-5.0.0" data-requires-python="&gt;=3.12.5">nwtimetracking-5.0.0</a>
 	<br/>
-    <a href="git+https://github.com/numbworks/nwtimetracking.git@v4.8.0#egg=nwtimetracking&subdirectory=src" data-requires-python="&gt;=3.12.5">nwtimetracking-4.8.0</a>
+    <a href="git+https://github.com/numbworks/nwtimetracking.git@v4.8.0#subdirectory=src&egg=nwtimetracking-4.8.0" data-requires-python="&gt;=3.12.5">nwtimetracking-4.8.0</a>
 	<br/>
-    <a href="git+https://github.com/numbworks/nwtimetracking.git@v4.7.0#egg=nwtimetracking&subdirectory=src" data-requires-python="&gt;=3.12.5">nwtimetracking-4.7.0</a>
+    <a href="git+https://github.com/numbworks/nwtimetracking.git@v4.7.0#subdirectory=src&egg=nwtimetracking-4.7.0" data-requires-python="&gt;=3.12.5">nwtimetracking-4.7.0</a>
 	<br/>	
-    <a href="git+https://github.com/numbworks/nwtimetracking.git@v4.6.0#egg=nwtimetracking&subdirectory=src" data-requires-python="&gt;=3.12.5">nwtimetracking-4.6.0</a>
+    <a href="git+https://github.com/numbworks/nwtimetracking.git@v4.6.0#subdirectory=src&egg=nwtimetracking-4.6.0" data-requires-python="&gt;=3.12.5">nwtimetracking-4.6.0</a>
 	<br/>
-    <a href="git+https://github.com/numbworks/nwtimetracking.git@v4.5.0#egg=nwtimetracking&subdirectory=src" data-requires-python="&gt;=3.12.5">nwtimetracking-4.5.0</a>
+    <a href="git+https://github.com/numbworks/nwtimetracking.git@v4.5.0#subdirectory=src&egg=nwtimetracking-4.5.0" data-requires-python="&gt;=3.12.5">nwtimetracking-4.5.0</a>
 	<br/>
-    <a href="git+https://github.com/numbworks/nwtimetracking.git@v4.0.0#egg=nwtimetracking&subdirectory=src" data-requires-python="&gt;=3.12.5">nwtimetracking-4.0.0</a>
+    <a href="git+https://github.com/numbworks/nwtimetracking.git@v4.0.0#subdirectory=src&egg=nwtimetracking-4.0.0" data-requires-python="&gt;=3.12.5">nwtimetracking-4.0.0</a>
 	<br/>
   </body>
 </html>
