root, index.html: added logo.

--- a/index.html
+++ b/index.html
@@ -2,44 +2,18 @@
 <html>
   <head>
     <title>NW's Python Package Index</title>
-	<style>
-		body {
-		  font-family: "Source Sans Pro", "Trebuchet MS", "Lucida Grande", "Bitstream Vera Sans", "Helvetica Neue", "sans-serif";
-		  margin: 0px;
-		}
-		h1 {
-		  background-color: rgba(130,174,182,1);
-		  font-size: 24px;
-		  color: rgba(4,38,45,1);
-		  padding: 20px;
-		}	
-		.explanation {
-		  background-color: rgba(215,226,241,1);
-		  font-size: 14px;
-		  color: rgba(4,38,45,1);
-		  padding: 20px;
-		}
-		div.package {
-		  font-size: 16px;
-		  color: rgba(79,108,142,1);
-		  border-bottom: 5px solid rgba(215,227,241,1);
-		  padding: 20px;
-		  width: 100%;
-		}		
-</style>
   </head>
   <body>
-	<h1>NW's Python Package Index</h1>
-	<section class="explanation">
-		<p>$ <mark style="background-color: lightgrey;">pip install <b><i>package_name==version</i></b> --extra-index-url https://numbworks.github.io</mark></p>
-	</section>
-	<div class="package" >
-		<ul>
-			<li><a href="nwpackageversions/">nwpackageversions</a></li>
-			<li><a href="nwshared/">nwshared</a></li>
-			<li><a href="nwtimetracking/">nwtimetracking</a></li>
-			<li><a href="nwreadinglist/">nwreadinglist</a></li>
-		</ul>
-	</div>
+	<img src="https://avatars.githubusercontent.com/u/10279234" style="width: 150px; height: 150px;" />
+	<p>
+	  <b style="font-size: 32px;">NW's Python Package Index</b>
+	  (<a href="https://github.com/numbworks/numbworks.github.io/blob/master/README.md" style="font-size: 18px;">more info</a>)
+	</p>
+	<ul>
+		<li><a href="nwpackageversions/">nwpackageversions</a></li>
+		<li><a href="nwshared/">nwshared</a></li>
+		<li><a href="nwtimetracking/">nwtimetracking</a></li>
+		<li><a href="nwreadinglist/">nwreadinglist</a></li>
+	</ul>
   </body>
 </html>
