--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<li><a href="nwshared/">nwshared</a></li>
 		<li><a href="nwtimetracking/">nwtimetracking</a></li>
 		<li><a href="nwreadinglist/">nwreadinglist</a></li>
+		<li><a href="nwdocstringchecking/">nwdocstringchecking</a></li>
 	</ul>
   </body>
 </html>
