--- a/nwdocstringchecking/index.html
+++ b/nwdocstringchecking/index.html
@@ -4,7 +4,7 @@
     <title>nwdocstringchecking</title>
   </head>
   <body>
-    <h1>nwpackageversions</h1>
+    <h1>nwdocstringchecking</h1>
     <a href="git+https://github.com/numbworks/nwdocstringchecking.git@v1.0.0#subdirectory=src&egg=nwdocstringchecking-1.0.0" data-requires-python="&gt;=3.12.5">nwdocstringchecking-1.0.0</a>
 	<br/>	
   </body>
