--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 	  <b style="font-size: 32px;">NW's Python Package Index</b>
 	  (<a href="https://github.com/numbworks/numbworks.github.io/blob/master/README.md" style="font-size: 18px;">more info</a>)
 	</p>
+	<div style="background-color: #f0f0f0; padding: 10px;">
+	  <p>To install packages, open a Terminal application and run one of the following commands:</p>
+	  <ul>
+		<li><code>pip install --extra-index-url https://numbworks.github.io {package_name}</code></li>
+		<li><code>pip install --extra-index-url https://numbworks.github.io {package_name}=={version}</code></li>
+	  </ul>
+	</div>
 	<ul>
 		<li><a href="nwpackageversions/">nwpackageversions</a></li>
 		<li><a href="nwshared/">nwshared</a></li>
