--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	  <b style="font-size: 32px;">NW's Python Package Index</b>
 	  (<a href="https://github.com/numbworks/numbworks.github.io/blob/master/README.md" style="font-size: 18px;">more info</a>)
 	</p>
-	<div style="background-color: #f0f0f0; padding: 10px;">
+	<div style="background-color: #f0f0f0; padding: 10px; display: inline-block;">
 	  <p>To install the packages listed below, open a terminal application and run one of the following commands:</p>
 	  <ul>
 		<li><code>pip install --extra-index-url https://numbworks.github.io {package_name}</code></li>
