--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
 	  </ul>
 	</div>
 	<ul>
+		<li><a href="nwcommitaverages/">nwcommitaverages</a></li>
+		<li><a href="nwdocstringchecking/">nwdocstringchecking</a></li>
 		<li><a href="nwpackageversions/">nwpackageversions</a></li>
+		<li><a href="nwreadinglist/">nwreadinglist</a></li>
 		<li><a href="nwshared/">nwshared</a></li>
 		<li><a href="nwtimetracking/">nwtimetracking</a></li>
-		<li><a href="nwreadinglist/">nwreadinglist</a></li>
-		<li><a href="nwdocstringchecking/">nwdocstringchecking</a></li>
 	</ul>
   </body>
 </html>
