--- a/nwshared/index.html
+++ b/nwshared/index.html
@@ -5,6 +5,8 @@
   </head>
   <body>
     <h1>nwshared</h1>
+    <a href="git+https://github.com/numbworks/nwshared.git@v1.8.2#subdirectory=src&egg=nwshared-1.8.2" data-requires-python="&gt;=3.12.5">nwshared-1.8.2</a>
+	<br/>
     <a href="git+https://github.com/numbworks/nwshared.git@v1.8.1#subdirectory=src&egg=nwshared-1.8.1" data-requires-python="&gt;=3.12.5">nwshared-1.8.1</a>
 	<br/>
     <a href="git+https://github.com/numbworks/nwshared.git@v1.8.0#subdirectory=src&egg=nwshared-1.8.0" data-requires-python="&gt;=3.12.5">nwshared-1.8.0</a>
