--- a/nwreadinglist/index.html
+++ b/nwreadinglist/index.html
@@ -5,6 +5,8 @@
   </head>
   <body>
     <h1>nwreadinglist</h1>
+    <a href="git+https://github.com/numbworks/nwreadinglist.git@v5.1.0#subdirectory=src&egg=nwreadinglist-5.1.0" data-requires-python="&gt;=3.12.5">nwreadinglist-5.1.0</a>
+    <br/>
     <a href="git+https://github.com/numbworks/nwreadinglist.git@v4.4.0#subdirectory=src&egg=nwreadinglist-4.4.0" data-requires-python="&gt;=3.12.5">nwreadinglist-4.4.0</a>
     <br/>
     <a href="git+https://github.com/numbworks/nwreadinglist.git@v4.3.2#subdirectory=src&egg=nwreadinglist-4.3.2" data-requires-python="&gt;=3.12.5">nwreadinglist-4.3.2</a>
